# paperboy-n64

./: .clang-format  .clangd  .gitignore  CLAUDE.md  DECOMPILING.md  README.md  checksum.sha1  configure.py  decomp.yaml  diff_settings.py  entry_summaries.md  garbage.py  pal2us.py  paperboy.yaml  pyproject.toml  setup  splat.schema.json  symbol_addrs.txt  undefined_funcs.txt  undefined_syms.txt  undefined_syms_pal.txt
docs/: binary-file-format.md  class-hierarchy.md
include/: bandicoot.h  bettong.h  boodie.h  bowerbird.h  bunyip.h  camera.h  cockatoo.h  common.h  controller_system.h  currawong.h  dingo.h  dugong.h  dunnart.h  echidna.h  fennec.h  file.h  game.h  goanna.h  heap.h  hedgehog.h  hyena.h  include_asm.h  input.h  kangaroo.h  koala.h  kookaburra.h  marsupial.h  n64_controller_system.h  otter.h  parrot.h  peacock.h  pelican.h  penguin.h  pixel_format.h  porcupine.h  possum.h  potoroo.h  quoll.h  render_context.h  sandpiper.h  (+11 more)
src/: 109C0.c  10CC0.cpp  11570.cpp  16970.cpp  17440.cpp  177B0.cpp  27D10.c  29ED0.cpp  2A500.c  2A500.cpp  2C9A0.cpp  318E0.c  3D5E0.cpp  3DE40.cpp  3E8E0.cpp  3F580.c  3F820.c  41CE0.c  41CE0.cpp  43DD0.cpp  455F0.cpp  477C0.c  477C0.cpp  48AD0.cpp  49630.c  49630.cpp  4A000.c  4B220.c  4B2F0.c  4C630.c  4D0D0.c  55220.c  7FE0.c  7FE0.cpp  8260.cpp  88330.c  88330.cpp  8E30.cpp  8EB0.cpp  9E10.cpp  (+65 more)
tools/: dump-rdata.py  find_unlabeled_vtables.py  format_symbol_addrs.py  gen_fennec.py  gen_padmelon.py  make_expected.sh  most_called.py  patch_rom.py  summarize_entry.py  tu_deps.py  update_symbol_addrs.py  verify_symbol_addrs.py
(+15 files in other folders)
